--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,8 @@
+
+body{
+    font-family: Arial;
+}
+
 del.cross {
     display:inline-block; /* запрещает перенос текста на следующую строку */
     text-decoration:none;
@@ -30,4 +35,76 @@ del.cross:before,
 .holder {
 background-color:yellow;
 
+}
+#new{
+    float: right;
+}
+.red{
+    color:red;
+    font:14px;
+   float: right;
+}
+#all_search{
+    float: right;
+}
+.image_avatar{
+    float: left;
+    margin-left:5px; 
+
+}
+.advert{
+    position: relative;
+}
+.description{
+    
+   word-break: break-all;
+}
+.client_adverts{
+    border:2px solid #ccc;
+}
+.adverts_realtor{
+    border: 2px solid #6B6666;
+    z-index: 3;
+}
+.desctop{
+    border:2px solid #ccc;
+    width: 300px;
+    height: 600px;
+
+}
+.client{
+    border: 2px solid #ccc;
+    z-index: 1;
+}
+.clients{
+    overflow: scroll;
+    height: 550px;
+}
+.green{
+    color:green;
+    font:14px;
+}
+.search{
+    background: #eee;
+}
+.panel-heading{
+    background: #2CA2BF;
+}
+#slider{
+    background: #18bc9c;
+}
+#footer{
+    height: 200px;
+    background: yellow;
+}
+.realtor_adverts{
+    overflow: scroll;
+    height: 550px;
+}
+.recommended_adverts{
+    background: #eee;
+}
+.recommended_title{
+   font-size: 23px;
+   font-family: Georgia;
 }
